# ott-timetracker

./: .gitignore  README.md  pyproject.toml
src/ott_timetracker/: __init__.py  cli.py
tests/: test_cli.py
